fix: add padding on sidebar on mobile

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -216,6 +216,7 @@ select:focus {
 
     ul {
         display: grid;
+        padding-top: 2rem;
         grid-template-columns: 1fr 1fr 1fr;
         background-color: var(--dark-green);
     }
